# homepage

./: .gitignore  404.html  CNAME  Main.hs  README.md  blog.html  donate.html  favicon.xcf  files.html  flake.nix  hie.yaml  homepage.cabal  homepage.json  index.html  projects.html  service.nix  stylesheet.css  thankYou.html  weeder.dhall
.github/workflows/: default.yml
blog/: Makefile  README.md  config.json  entries.json  myOwnImplementationOfIExpressions.html  myWayToCoreboot.html  subflake.nix
blog/source/: accum.adoc  accumtsMonadaccumInstance.adoc  anInterfaceForAccessingEnvironmentVariables.adoc  composingTransformers.adoc  incrementalHaskellBuildsWithNix.adoc  mensamAnnouncement.adoc  mensamUpdate.adoc  monadTransformerCompatibility.adoc  myWayToCoreboot.adoc  votingSystems.adoc  zurihac2022.adoc
config/: homepage.json  subflake.nix
donate/: donate.html  thankYou.html
files/: Felix_Springer-publickey-mail.gpg  entries.json  subflake.nix
final/: module.nix  subflake.nix
homepage/: Main.hs  default.nix  flake.nix  homepage.cabal  shell.nix
homepage/nix/: build.nix
homepage/src/: Configuration.hs  Homepage.hs
homepage/src/Homepage/: Blog.hs  CLI.hs  Configuration.hs
homepage/src/Homepage/Server/: Err404.hs  Header.hs  Route.hs  Tab.hs
homepage/src/Homepage/Server/Html/: Blog.hs  Depth.hs  Document.hs  Header.hs
homepage/src/Homepage/Server/Route/: Blog.hs  Donate.hs  Files.hs  Home.hs  Projects.hs  Rss.hs  Static.hs
homepage/src/Homepage/Server/Route/Blog/: Atom.hs
homepage/src/Server/: Err404.hs
homepage/src/Server/Route/: Home.hs
homepage/static/: asciidoctor.css
homepage/static/blog/: myOwnImplementationOfIExpressions.adoc  myWayToCoreboot.adoc
homepage/static/static/: stylesheet.css
server/: README.md  flake.nix  fourmolu.yaml  hie.yaml  homepage.cabal  subflake.nix
server/source/test-application/: Main.hs
setup/: development.json  subflake.nix
setup/configurations/: development.json  nixpublic.json
source/Homepage/: Application.hs  Configuration.hs
source/Homepage/Application/Environment/: Class.hs
source/Homepage/Configuration/: BaseUrl.hs
source/Homepage/Handler/: RequestHash.hs
source/Homepage/Server/: Err404.hs
source/Homepage/Server/Html/: Depth.hs  Files.hs
source/Homepage/Server/Route/: Home.hs  Static.hs
source/executable/: Main.hs
src/: Homepage.hs
src/Control/Monad/Catch/: OrphanInstances.hs
src/Control/Monad/Logger/: OrphanInstances.hs
src/Control/Monad/Trans/: Compose.hs
src/Control/Monad/Trans/Compose/: Infix.hs
src/Homepage/: Application.hs  BaseUrl.hs  Blog.hs  Configuration.hs  Contact.hs  Environment.hs  Files.hs  Handler.hs  Server.hs
src/Homepage/Application/: Blog.hs  Compose.hs  Configurable.hs  Configured.hs  Environment.hs  Logging.hs
src/Homepage/Application/Blog/: Class.hs
src/Homepage/Application/Configurable/: Class.hs
src/Homepage/Application/Configured/: Acquisition.hs  Class.hs
src/Homepage/Application/Environment/: Acquisition.hs  Class.hs
src/Homepage/Configuration/: Acquisition.hs  BaseUrl.hs  Blog.hs  Contact.hs  Files.hs
src/Homepage/Environment/: Acquisition.hs
src/Homepage/Handler/: RequestHash.hs
src/Homepage/Server/: Err404.hs  Route.hs  Tab.hs
src/Homepage/Server/Html/: AsciiDoc.hs  Blog.hs  Depth.hs  Document.hs  Files.hs  Header.hs
src/Homepage/Server/Route/: Blog.hs  Donate.hs  Files.hs  Home.hs  Projects.hs  Static.hs
src/Homepage/Server/Route/Blog/: Atom.hs
static/: Makefile  subflake.nix
static/blog/: LICENSE  aSmallShowcaseOfBlucontrol.adoc  anInterfaceForAccessingEnvironmentVariables.adoc  beans.adoc  beyondTypeclassopedia.adoc  composingTransformers.adoc  derivingTrans.adoc  environmentVariables.adoc  jsonFormatting.adoc  myOwnImplementationOfIExpressions.adoc  myWayToCoreboot.adoc  projectsOnMyHomepage.adoc  singletonsInHaskell.adoc  zurihac2022.adoc
static/blog/style/: pdf-theme.yml
static/static/: asciidoctor.css  stylesheet.css  stylesheet.less
