cabal-version: 3.0
name: homepage
version: 0

library
  exposed-modules:
    , Homepage
    , Homepage.Application
    , Homepage.Application.Blog
    , Homepage.Application.Blog.Class
    , Homepage.Application.Configured
    , Homepage.Application.Configured.Acquisition
    , Homepage.Application.Configured.Class
    , Homepage.Application.Environment
    , Homepage.Application.Environment.Acquisition
    , Homepage.Application.Environment.Class
    , Homepage.Application.Logging
    , Homepage.Configuration
    , Homepage.Configuration.BaseUrl
    , Homepage.Configuration.Blog
    , Homepage.Configuration.Contact
    , Homepage.Configuration.Files
    , Homepage.Environment
    , Homepage.Server
    , Homepage.Server.Err404
    , Homepage.Server.Html.Blog
    , Homepage.Server.Html.Depth
    , Homepage.Server.Html.Document
    , Homepage.Server.Html.Files
    , Homepage.Server.Html.Header
    , Homepage.Server.Route
    , Homepage.Server.Route.Blog
    , Homepage.Server.Route.Blog.Atom
    , Homepage.Server.Route.Donate
    , Homepage.Server.Route.Files
    , Homepage.Server.Route.Home
    , Homepage.Server.Route.Static
    , Homepage.Server.Tab
  other-modules:
    , Control.Monad.Logger.OrphanInstances
    , Text.Blaze.Html5.Extra
  build-depends:
    , aeson
    , base
    , blaze-html
    , blaze-markup
    , bytestring
    , containers
    , deriving-aeson
    , deriving-trans
    , feed
    , http-media
    , http-types
    , monad-control
    , monad-logger
    , mtl
    , servant
    , servant-blaze
    , servant-rawm-server
    , servant-server
    , text
    , time
    , transformers
    , transformers-base
    , unix
    , wai
    , wai-app-static
    , warp
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    CUSKs
      -- ^ implied by Haskell2010
    -- DatatypeContexts
      -- ^ implied by Haskell2010, deprecated
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
      -- ^ implied by Haskell2010
    EmptyCase
    EmptyDataDecls
      -- ^ implied by Haskell2010
    EmptyDataDeriving
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
      -- ^ implied by Haskell2010
    FunctionalDependencies
    GADTSyntax
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
      -- ^ implied by Haskell2010
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
      -- ^ implied by Haskell2010
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    -- PatternGuards
      -- ^ implied by Haskell2010
    NoPatternGuards
    PolyKinds
    RankNTypes
    RelaxedPolyRec
      -- ^ implied by Haskell2010
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    -- StarIsType
      -- ^ implied by Haskell2010
    NoStarIsType
    TraditionalRecordSyntax
      -- ^ implied by Haskell2010
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
  ghc-options:
    -fwrite-ide-info
      -- ^ Generate data for 'weeder'.
    -O2
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-compat-unqualified-imports
    -Wno-implicit-prelude
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-safe-haskell-mode
    -Wno-unsafe

executable homepage
  main-is: Main.hs
  build-depends:
    , homepage
  default-language: Haskell2010
  default-extensions:
    NoImplicitPrelude
  ghc-options:
    -threaded
