name:                homepage
version:             0.1.0.0
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:     Homepage
                     , Homepage.Configuration
                     , Homepage.Server.Html.Header
                     , Homepage.Server.Err404
                     , Homepage.Server.Route
                     , Homepage.Server.Route.Blog
                     , Homepage.Server.Route.Donate
                     , Homepage.Server.Route.Files
                     , Homepage.Server.Route.Home
                     , Homepage.Server.Route.Projects
  build-depends:       base
                     , blaze-html
                     , bytestring
                     , containers
                     , http-types
                     , lifted-base
                     , monad-control
                     , servant
                     , servant-blaze
                     , servant-server
                     , text
                     , time
                     , transformers
                     , transformers-base
                     , unix
                     , wai
                     , wai-app-static
                     , wai-control
                     , warp
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       DerivingStrategies
                       DerivingVia
                       EmptyDataDeriving
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       NamedFieldPuns
                       OverloadedStrings
                       RankNTypes
                       StandaloneDeriving
                       TypeApplications
                       TypeFamilies
                       TypeOperators
  ghc-options:         -Wall

executable homepage
  main-is:             Main.hs
  build-depends:       base
                     , homepage
  default-language:    Haskell2010
  ghc-options:         -Wall
