cabal-version: 3.0
name: homepage
version: 0.0.0.0

library
  exposed-modules:     Homepage
                     , Homepage.Blog
                     , Homepage.CLI
                     , Homepage.Configuration
                     , Homepage.Server.Html.AsciiDoc
                     , Homepage.Server.Html.Blog
                     , Homepage.Server.Html.Depth
                     , Homepage.Server.Html.Document
                     , Homepage.Server.Html.Header
                     , Homepage.Server.Err404
                     , Homepage.Server.Route
                     , Homepage.Server.Route.Blog
                     , Homepage.Server.Route.Donate
                     , Homepage.Server.Route.Files
                     , Homepage.Server.Route.Home
                     , Homepage.Server.Route.Projects
                     , Homepage.Server.Route.Static
                     , Homepage.Server.Tab
  build-depends:       base
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , containers
                     , feed
                     , http-types
                     , lifted-base
                     , monad-control
                     , servant
                     , servant-blaze
                     , servant-rawm
                     , servant-rawm-server
                     , servant-server
                     , text
                     , time
                     , transformers
                     , transformers-base
                     , unix
                     , wai
                     , wai-app-static
                     , wai-control
                     , warp
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       DerivingStrategies
                       DerivingVia
                       EmptyDataDeriving
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       NamedFieldPuns
                       OverloadedStrings
                       RankNTypes
                       StandaloneDeriving
                       TypeApplications
                       TypeFamilies
                       TypeOperators
  ghc-options:         -Wall

executable homepage
  main-is:             Main.hs
  build-depends:       base
                     , homepage
  default-language:    Haskell2010
  ghc-options:         -Wall
