cabal-version: 3.0
name: homepage
version: 0

flag cabal2nix
  default: False

common language
  default-language: GHC2021
  default-extensions:
    BangPatterns
      -- ^ implied by GHC2021
    BinaryLiterals
      -- ^ implied by GHC2021
    ConstrainedClassMethods
      -- ^ implied by GHC2021
    ConstraintKinds
      -- ^ implied by GHC2021
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
      -- ^ implied by GHC2021
    DeriveFoldable
      -- ^ implied by GHC2021
    DeriveFunctor
      -- ^ implied by GHC2021
    DeriveGeneric
      -- ^ implied by GHC2021
    DeriveLift
      -- ^ implied by GHC2021
    DeriveTraversable
      -- ^ implied by GHC2021
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
      -- ^ implied by GHC2021
    EmptyCase
      -- ^ implied by GHC2021
    EmptyDataDecls
      -- ^ implied by GHC2021
    EmptyDataDeriving
      -- ^ implied by GHC2021
    ExistentialQuantification
      -- ^ implied by GHC2021
    ExplicitForAll
      -- ^ implied by GHC2021
    ExplicitNamespaces
    FieldSelectors
      -- ^ implied by GHC2021
    FlexibleContexts
      -- ^ implied by GHC2021
    FlexibleInstances
      -- ^ implied by GHC2021
    ForeignFunctionInterface
      -- ^ implied by GHC2021
    FunctionalDependencies
    GADTSyntax
      -- ^ implied by GHC2021
    GeneralisedNewtypeDeriving
      -- ^ implied by GHC2021
    HexFloatLiterals
      -- ^ implied by GHC2021
    ImplicitPrelude
      -- ^ implied by GHC2021
    ImportQualifiedPost
      -- ^ implied by GHC2021
    InstanceSigs
      -- ^ implied by GHC2021
    KindSignatures
      -- ^ implied by GHC2021
    LambdaCase
    LexicalNegation
    MonomorphismRestriction
      -- ^ implied by GHC2021
    MultiParamTypeClasses
      -- ^ implied by GHC2021
    NamedFieldPuns
      -- ^ implied by GHC2021
    NamedWildCards
      -- ^ implied by GHC2021
    NumDecimals
    NumericUnderscores
      -- ^ implied by GHC2021
    OverloadedStrings
    -- PatternGuards
      -- ^ implied by GHC2021
    NoPatternGuards
    PolyKinds
      -- ^ implied by GHC2021
    PostfixOperators
      -- ^ implied by GHC2021
    RankNTypes
      -- ^ implied by GHC2021
    RelaxedPolyRec
      -- ^ implied by GHC2021
    ScopedTypeVariables
      -- ^ implied by GHC2021
    StandaloneDeriving
      -- ^ implied by GHC2021
    StandaloneKindSignatures
      -- ^ implied by GHC2021
    -- StarIsType
      -- ^ implied by GHC2021
    NoStarIsType
    TraditionalRecordSyntax
      -- ^ implied by GHC2021
    TupleSections
      -- ^ implied by GHC2021
    TypeApplications
      -- ^ implied by GHC2021
    TypeOperators
      -- ^ implied by GHC2021
    TypeSynonymInstances
      -- ^ implied by GHC2021
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-safe-haskell-mode
    -Wno-unsafe
    -Wno-unticked-promoted-constructors
  if flag(cabal2nix)
    ghc-options:
      -Werror
  else
    ghc-options:
      -fdefer-typed-holes
      -fwrite-ide-info
        -- ^ Generate data for 'weeder'.

common dependencies
  build-depends:
    , aeson
    , base
    , blaze-html
    , blaze-markup
    , bytestring
    , containers
    , deriving-aeson
    , deriving-trans
    , feed
    , hashable
    , http-media
    , http-types
    , monad-control
    , monad-control-identity
    , monad-logger
    , mtl
    , servant
    , servant-blaze
    , servant-rawm
    , servant-rawm-server
    , servant-server
    , singletons
    , singletons-th
    , text
    , time
    , transformers
    , transformers-base
    , unix
    , unliftio
    , unliftio-core
    , wai
    , wai-app-static
    , wai-control
    , warp

library
  import:
    , dependencies
    , language
  exposed-modules:
    , Homepage
    , Homepage.Application
    , Homepage.Application.Blog
    , Homepage.Application.Blog.Class
    , Homepage.Application.Configured
    , Homepage.Application.Configured.Acquisition
    , Homepage.Application.Configured.Class
    , Homepage.Application.Environment
    , Homepage.Application.Environment.Acquisition
    , Homepage.Application.Environment.Class
    , Homepage.Application.Logging
    , Homepage.Configuration
    , Homepage.Configuration.BaseUrl
    , Homepage.Configuration.Blog
    , Homepage.Configuration.Contact
    , Homepage.Configuration.Files
    , Homepage.Environment
    , Homepage.Handler
    , Homepage.Handler.RequestHash
    , Homepage.Server
    , Homepage.Server.Err404
    , Homepage.Server.FileServer
    , Homepage.Server.Html.Blog
    , Homepage.Server.Html.Depth
    , Homepage.Server.Html.Document
    , Homepage.Server.Html.Files
    , Homepage.Server.Html.Header
    , Homepage.Server.Route
    , Homepage.Server.Route.Blog
    , Homepage.Server.Route.Blog.Atom
    , Homepage.Server.Route.Blog.Atom.Type
    , Homepage.Server.Route.Blog.Type
    , Homepage.Server.Route.Donate
    , Homepage.Server.Route.Donate.Type
    , Homepage.Server.Route.Files
    , Homepage.Server.Route.Files.Type
    , Homepage.Server.Route.Home
    , Homepage.Server.Route.Home.Type
    , Homepage.Server.Route.Redirect
    , Homepage.Server.Route.Redirect.Type
    , Homepage.Server.Route.Static
    , Homepage.Server.Route.Static.Type
    , Homepage.Server.Route.Type
    , Homepage.Server.Tab
  other-modules:
    , Control.Monad.IO.Unlift.OrphanInstances
    , Control.Monad.Logger.OrphanInstances
    , System.Posix.Signals.Patterns
    , Text.Blaze.Html5.Extra
  hs-source-dirs: source/library

executable homepage-test-application
  import:
    , dependencies
    , language
  build-depends:
    , homepage
  main-is: Main.hs
  hs-source-dirs: source/test-application
  ghc-options:
    -Wno-unused-packages

executable homepage
  build-depends:
    , homepage
  main-is: Main.hs
  hs-source-dirs: source/executable
  default-language: GHC2021
  default-extensions:
    NoImplicitPrelude
  ghc-options:
    -threaded
